2001-11-19  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-socket.c
	(bonobo_socket_class_init): upd.
	(bonobo_socket_show_all): empty impl - don't propagate.

Tue Nov 20 21:17:03 2001  Owen Taylor  <otaylor@redhat.com>

	* bonobo/bonobo-control-frame.c (bonobo_control_frame_get_control_property):
	Finish renaming opt_ev argument in function body as well.

	* samples/compound-doc/container/{component.h, document.h}: Include glib-object.h
	instead of specific gobject/* header files. 

2001-11-20  Mark McLoughlin  <mark@skynet.ie>

	* bonobo/bonobo-control-frame.[ch]:
	(bonobo_control_frame_get_control_property_bag): renamed
	exception param to 'opt_ev' to indicate that it's optional.

2001-11-19  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-plug.c (bonobo_plug_dispose): update
	to use bonobo_socket_disposed.

	* bonobo/bonobo-socket.c (bonobo_socket_disposed): impl.
	internal method to replace GTK_OBJECT_DESTROYED

2001-11-18  Peter Williams  <peterw@ximian.com>

	* bonobo/bonobo-ui-marshal-main.c: Same.

	* bonobo/bonobo-ui-xml.c: See below.

	* bonobo/bonobo-ui-engine.c: Include glib-object.h instead of gobject/gsignal.h

	* bonobo/bonobo-ui-component.c: Remove a double-include of bonobo-types.h

	* bonobo/bonobo-ui-xml.h: Include glib-object.h instead of gobject/gobject.h

	* bonobo/bonobo-canvas-item.c (prepare_state): See below.

	* bonobo/bonobo-canvas-component.c (restore_state): Don't
	try to set the xoffset / yoffset members of GtkLayout;
	they've been removed.

2001-11-15  Michael Meeks  <michael@ximian.com>

	* tests/control/test-control.c (run_tests): beef up
	the tests with some re-parenting action.

	* bonobo/bonobo-plug.c (bonobo_plug_expose_event): 
	add debug rendering.

	* bonobo/bonobo-control-internal.h: turn off control
	debugging for a cleaner feel ...

	* bonobo/bonobo-control-frame.c
	(bonobo_control_frame_set_remote_window): rename to
	(bonobo_control_frame_get_remote_window): this to
	better reflect function.