@@ -1,3 +1,8 @@
+2001-11-26  jacob berkman  <jacob@ximian.com>
+
+	* bonobo/bonobo-socket.[ch] (bonobo_socket_get_type): return a GType
+	rather than guint
+
 2001-11-19  Michael Meeks  <michael@ximian.com>
 
 	* bonobo/bonobo-socket.c
